--- a/templates/post/create.html.twig
+++ b/templates/post/create.html.twig
@@ -3,7 +3,7 @@
 {% block body %}
     <h2>Crear Post</h2>
 
-    {% include 'post/_form.html.twig' with {'form': form} only %}
+    {% include 'post/_form.html.twig' %}
     
     <a href="{{ path('home') }}" class="btn btn-outline-secondary button-margin ml-auto">Volver atrás</a>
 
