updated edit remove post

--- a/templates/post/list.html.twig
+++ b/templates/post/list.html.twig
@@ -4,6 +4,7 @@
     <style>
         .table-margin { margin-top: 20px; margin-bottom: 15px; }
         .navigation { float: none; margin: 0 auto; }
+        .table td { vertical-align: middle; }
     </style>
     <div class="row table-margin">
         <table class="table text-center">
