--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -56,6 +56,7 @@
     <div class="sidenav">
         <a href="{{ path('category.list') }}">Categorías</a>
         <a href="{{ path('post.list') }}">Lista Post</a>
+        <a href="{{ path('post.mylist') }}">Mis Post</a>
         <a href="{{ path('post.create') }}">Nuevo Post</a>
     </div>
 
