--- a/templates/post/mylist.html.twig
+++ b/templates/post/mylist.html.twig
@@ -1,4 +1,4 @@
-{% extends 'admin/base.html.twig' %}
+{% extends 'base.html.twig' %}
 
 {% block body %}
     <style>
@@ -12,7 +12,6 @@
         <thead>
         <tr class="active">
             <th class="text-center">Categoría</th>
-            <th class="text-center">Autor</th>
             <th class="text-center">Título</th>
             <th class="text-center">Texto</th>
             <th class="text-center">Fecha</th>
@@ -23,14 +22,13 @@
         {% for post in posts %}
             <tr>
                 <td>{{ post.category.name }}</td>
-                <td>{{ post.author.name }}</td>
                 <td>{{ post.title }}</td>
-                <td>{{ post.content|slice(0, 150) }}... <a href="{{ path('post.show', {id: post.id}) }}">Leer más</a></td>
+                <td>{{ post.content|slice(0, 200) }}... <a href="{{ path('post.show', {id: post.id}) }}">Leer más</a></td>
                 <td>{{ post.publishedAt|date('d-m-Y') }}</td>
                 <td class="text-nowrap">
-                    <a href="{{ path('admin.post.edit', {id: post.id}) }}" class="btn btn-outline-success btn-sm"><i class="material-icons">edit</i></a>
+                    <a href="{{ path('post.edit', {id: post.id}) }}" class="btn btn-outline-success btn-sm"><i class="material-icons">edit</i></a>
                     
-                    <form class="button-delete" method="post" action="{{ path('admin.post.delete', {id: post.id}) }}" onsubmit="return confirm('¿Seguro que desea eliminar el Post?');">
+                    <form class="button-delete" method="post" action="{{ path('post.delete', {id: post.id}) }}" onsubmit="return confirm('¿Seguro que desea eliminar el Post?');">
                         <input type="hidden" name="_method" value="DELETE">
                         <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ post.id) }}">
                         <button class="btn btn-outline-danger btn-sm"><i class="material-icons">delete_forever</i></a>
