--- a/templates/Admin/base.html.twig
+++ b/templates/Admin/base.html.twig
@@ -3,7 +3,7 @@
 {% block mainbody %}
     <style>
         .button-margin { margin-left: 5px; }
-        .navbar { z-index: 2; }
+        .navbar { z-index: 2; width: 100%; position: fixed; }
         .navbar-brand { width: 140px; }
         .sidenav {
             height: 100%;
@@ -24,7 +24,7 @@
             display: block;
         }
         .sidenav a:hover { color: #000000; }
-        .main { margin-left: 160px; padding: 0px 40px; }
+        .main { margin-left: 160px; padding: 50px 40px 0px 40px; }
         @media screen and (max-height: 450px) { .sidenav {padding-top: 15px;} .sidenav a {font-size: 18px;} }
     </style>
 
