--- a/templates/Admin/post/list.html.twig
+++ b/templates/Admin/post/list.html.twig
@@ -25,7 +25,7 @@
                 <td>{{ post.category.name }}</td>
                 <td>{{ post.author.name }}</td>
                 <td>{{ post.title }}</td>
-                <td>{{ post.content|slice(0, 150) }}... <a href="{{ path('post.show', {id: post.id}) }}">Leer más</a></td>
+                <td>{{ post.content|slice(0, 150) }}... <a href="{{ path('admin.post.show', {id: post.id}) }}">Leer más</a></td>
                 <td>{{ post.publishedAt|date('d-m-Y') }}</td>
                 <td class="text-nowrap">
                     <a href="{{ path('admin.post.edit', {id: post.id}) }}" class="btn btn-outline-success btn-sm"><i class="material-icons">edit</i></a>
