--- a/templates/bundles/FOSUserBundle/Security/login.html.twig
+++ b/templates/bundles/FOSUserBundle/Security/login.html.twig
@@ -4,20 +4,15 @@
     <style>
         .card-header{ text-align: center; }
         .card { margin: 0 auto; float: none; margin-bottom: 10px; margin-top: 100px; }
+        .error{ text-align: center; color: red; margin-bottom: 10px; }
     </style>
 
     {% trans_default_domain 'FOSUserBundle' %}
-
-    {% if error %}
-        <div>{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
 
     <div class="container">
         <div class="card bg-light mb-3 border-primary" style="max-width: 18rem;">
             <div class="card-header"><h5>BLOG</h5></div>
             <div class="card-body">
-                {# <h5 class="card-title">Light card title</h5> #}
-                {# <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p> #}
 
         <form action="{{ path("fos_user_security_check") }}" method="post">
             <input type="hidden" name="_csrf_token" value="{{ csrf_token }}"/>
@@ -37,7 +32,13 @@
                 <label class="form-check-label" for="remember_me">Recordarme</label>
             </div>
 
+            {% if error %}
+                <div class="error">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+            {% endif %}
+
             <button type="submit" class="btn btn-outline-primary btn-block" id="_submit" name="_submit">Iniciar Sesión</button>
+            <a class="btn btn-outline-primary btn-block" role="button" href="{{ path('fos_user_registration_register') }}">Crear Cuenta</a>
+
         </form>
 
             </div>
