--- a/templates/structure.html.twig
+++ b/templates/structure.html.twig
@@ -2,7 +2,7 @@
 <html>
     <head>
         <!-- Required meta tags -->
-        <meta charset="utf-8">
+        <meta charset="utf-8" lang="es">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
         <title>{% block title %}BLOG - Desafío{% endblock %}</title>    
 
