--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,7 +25,7 @@
         }
         .sidenav a:hover { color: #000000; }
         .sidenav-sub a { color: #B0B0B0; font-size: 20px; }
-        .main { margin-left: 160px; padding: 50px 40px 0px 40px; }
+        .main { margin-left: 160px; padding: 65px 40px 0px 40px; }
         @media screen and (max-height: 450px) { .sidenav {padding-top: 15px;} .sidenav a {font-size: 18px;} }
     </style>
 
@@ -46,6 +46,7 @@
         {% endif %}
 
         {% if app.user %}
+            <a class="btn btn-outline-primary button-margin" role="button" href="{{ path('fos_user_profile_show') }}">Perfil</a>
             <a class="btn btn-outline-primary button-margin" role="button" href="{{ path('fos_user_security_logout') }}">Salir</a>
         {% else %}
             <a class="btn btn-outline-primary button-margin" role="button" href="{{ path('fos_user_security_login') }}">Ingresar</a>
