--- a/templates/post/_form.html.twig
+++ b/templates/post/_form.html.twig
@@ -7,7 +7,7 @@
 
     <div class="form-group">
         <div class="col-sm-offset-6 col-sm-6 d-flex button-rigth">
-            <button type="submit" class="btn btn-outline-secondary ml-auto">Guardar</button>
+            <button type="submit" class="btn btn-outline-primary ml-auto">Guardar</button>
         </div>
     </div>
 {{ form_end(form) }}
